codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  是 否 允 许 执 行 以 下 命 令 ？

  线 程 ： Robie [explorer]

  $ echo hi

› 1. 是 ， 继 续 执 行  (y)
  2. 否 ， 并 告 知  Codex 应 如 何 调 整  (esc)

  按  enter 确 认 ， 按  esc 取 消 ， 或 按  o 打 开 线 程
