codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__network_exec_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 12 },
    content: [
        "                                                                                                    ",
        "  是否允许访问网络主机“example.com”？                                                               ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (36, " ")]
        "                                                                                                    ",
        "  原因：network request blocked                                                                     ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
        "                                                                                                    ",
        "                                                                                                    ",
        "› 1. 是，仅此一次 (y)                                                                               ", // hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " ")]
        "  2. 是，本次会话允许此主机 (a)                                                                     ", // hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " ")]
        "  3. 是，今后允许此主机 (p)                                                                         ", // hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
        "  4. 否，并告知 Codex 应如何调整 (esc)                                                              ", // hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " ")]
        "                                                                                                    ",
        "  按 enter 确认，按 esc 取消                                                                        ", // hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (25, " "), (27, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 26, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 12, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 16, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 18, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
